# gameboycore

./: .codedocs  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Doxyfile-mcss  Installation.html  LICENSE.md  LICENSE.txt  README.md  README_8md.html  alu_8h.html  alu_8h__incl.map  alu_8h__incl.md5  alu_8h_source.html  annotated.html  appveyor.yml  apu_8h.html  apu_8h__dep__incl.map  apu_8h__dep__incl.md5  apu_8h__incl.map  apu_8h__incl.md5  apu_8h_source.html  build.xml  cartinfo_8h.html  cartinfo_8h__incl.map  cartinfo_8h__incl.md5  cartinfo_8h_source.html  channel_8h.html  channel_8h__dep__incl.map  channel_8h__dep__incl.md5  channel_8h__incl.map  channel_8h__incl.md5  channel_8h_source.html  classSquare.html  classWave.html  classes.html  classgb_1_1ALU-members.html  classgb_1_1ALU.html  (+405 more)
cmake/: get-version-config.cmake  version-config.cmake
config/: cppcheck-suppress.txt
docs/: Doxyfile.in  customdoxygen.css
include/: GBCore.h  GBEmulator.h  Z80Core.h  Z80Core.hpp  Z80Emulator.h  com_nnarain_gb_GBCore.h  gbapi.h  gbcore.h  gbmapregion.h  gboam.h  gbpalette.h  gbparser.h  gbtile.h  mbc.h  memopts.h  z80.hpp
scripts/: ci_install  coverage  travis_deploy_docs
src/: CMakeLists.txt  GBCore.h  GBCoreJNI.c  GBEmulator.c  GBEmulator.cpp  GBEmulator.h  Test.c  Z80Emulator.cpp  add.c  add.h  branch.c  branch.h  branch_control.c  branch_control.h  com_nnarain_gb_GBCore.h  com_nnarain_gb_resource_GBCore.h  com_nnarain_gb_resource_GBNativeResource.h  com_nnarain_gb_resource_GBROMParser.h  compare.c  compare.h  decrement.c  decrement.h  decrement_reg_pair.c  decrement_reg_pair.h  double_add.c  double_add.h  exchange.c  exchange.h  gbapi.c  gbcorejni.c  gbmapregion.c  gbnativeresourcejni.c  gbpalette.c  gbparser.c  gbparserjni.c  gbtile.c  increment.c  increment.h  increment_reg_pair.c  increment_reg_pair.h  (+21 more)
src/core/: alu.cpp  apu.cpp  bitutil.h  cartinfo.cpp  cpu.cpp  display.cpp  gameboy.cpp  gameboycore.cpp  gpu.cpp  joypad.cpp  lcd_controller.cpp  link.cpp  link_cable.cpp  mbc.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mmu.cpp  oam.cpp  opcodeinfo.cpp  shiftrotate.cpp  shiftrotate.h  tilemap.cpp  tileram.cpp  timer.cpp
src/disassembler/: CMakeLists.txt  disassembler.cpp
src/example/: CMakeLists.txt  audio.h  debug_window.h  emulator.cpp  imconfig.h  screen_renderer.h  window.h
src/examples/: CMakeLists.txt
src/examples/01_minimal/: CMakeLists.txt
src/examples/01_minimal/src/: main.cpp
src/examples/02_batteryram/: CMakeLists.txt
src/examples/02_batteryram/src/: main.cpp
src/examples/03_linkport/: CMakeLists.txt
src/examples/03_linkport/src/: main.cpp
src/examples/04_debug_output/: CMakeLists.txt
src/examples/04_debug_output/src/: main.cpp
src/gameboy/: CMakeLists.txt  audio.h  emulator.cpp  main.cpp  oam_texture.h  screen_renderer.h  texture_buffer.h  tilemap_texture.h  tileset_texture.h  window.h
src/gameboycore/: CMakeLists.txt
src/gameboycore/include/gameboycore/: alu.h  cartinfo.h  channel.h  cpu.h  gameboycore.h  gpu.h  instruction.h  interrupt_provider.h  joypad.h  link.h  link_cable.h  mbc.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  memorymap.h  mmu.h  oam.h  opcodeinfo.h  palette.h  pixel.h  rtc.h  sprite.h  tilemap.h  tileram.h  timer.h
src/gameboycore/include/gameboycore/detail/audio/: noise_channel.h  square_wave_channel.h  wave_channel.h
src/gameboycore/include/gameboycore/detail/rtc/: rtc.h
src/gameboycore/src/: alu.cpp  apu.cpp  bitutil.h  cartinfo.cpp  cpu.cpp  gameboycore.cpp  gpu.cpp  instruction.cpp  joypad.cpp  link.cpp  mbc.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mmu.cpp  oam.cpp  shiftrotate.cpp  tilemap.cpp  tileram.cpp
src/gameboycore/src/core/: apu.cpp  cpu.cpp  gameboycore.cpp  gpu.cpp  link.cpp  mbc5.cpp  mmu.cpp  oam.cpp  shiftrotate.cpp  tilemap.cpp  tileram.cpp  timer.cpp
src/gameboycore/tests/: CMakeLists.txt  bench_frame.cpp  bench_serialize.cpp  test_alu.cpp  test_api.cpp  test_bit_instructions.cpp  test_call_instructions.cpp  test_entry.cpp  test_helper.cpp  test_inc_dec_instructions.cpp  test_joypad.cpp  test_load_instructions.cpp  test_mbc1.cpp  test_mbc2.cpp  test_mbc3.cpp  test_mbc5.cpp  test_misc.cpp  test_mmu.cpp  test_stack_instructions.cpp
src/gameboycore/tests/include/util/: codegenerator.h
src/gameboycore/tests/test_runner/: CMakeLists.txt  test_runner.cpp  test_runner2.cpp
src/rominfo/: CMakeLists.txt  rominfo.cpp
src/tools/: CMakeLists.txt  emulator.cpp  texture_buffer.h  window.h
src/tools/gbdebugger/: CMakeLists.txt
src/tools/gbdebugger/include/: audio_stream.hpp  frame_buffer.hpp  gameboycore_debugger.hpp  user_interface.hpp
src/tools/gbdebugger/include/debugger/: annotations.hpp  debugger_interface.hpp  disassembly_generator.hpp  gameboycore_debugger.hpp
src/tools/gbdebugger/include/ui/: audio_stream.hpp  frame_buffer.hpp  user_interface.hpp
src/tools/gbdebugger/include/ui/views/: default_view.hpp  memory_view.hpp  view.hpp
src/tools/gbdebugger/src/: audio_stream.cpp  gameboycore_debugger.cpp  main.cpp  user_interface.cpp
src/tools/gbdebugger/src/debugger/: annotations.cpp  disassembly_generator.cpp  gameboycore_debugger.cpp
src/tools/gbdebugger/src/ui/: audio_stream.cpp  user_interface.cpp
src/tools/gbdebugger/src/ui/views/: default_view.cpp  memory_view.cpp
src/tools/rominfo/: CMakeLists.txt
src/tools/rominfo/include/: cartridge_header.hpp  rom_parser.hpp  rominfo.hpp
src/tools/rominfo/src/: rom_parser.cpp  rominfo.cpp
tests/: CMakeLists.txt  test_alu.cpp  test_arithmetic_instructions.cpp  test_bit_instructions.cpp  test_call_instructions.cpp  test_gpu.cpp  test_helper.cpp  test_inc_dec_instructions.cpp  test_invalid_opcodes.cpp  test_joypad.cpp  test_jump_instructions.cpp  test_load_instructions.cpp  test_load_instructions.h  test_low_power_mode.cpp  test_mbc1.cpp  test_misc.cpp  test_mmu.cpp  test_shift_rotate_instructions.cpp  test_stack_instructions.cpp  test_tilemap_iterator.cpp
tests/asm/: load8bitImm.asm
tests/include/: test_helper.h
tests/include/util/: codegenerator.h
tests/test_runner/: CMakeLists.txt  test_runner.cpp
(+205 files in other folders)
